Fix : the yellow for warning was very hard to read, orange is better.

--- a/shinken/webui/htdocs/layout.css
+++ b/shinken/webui/htdocs/layout.css
@@ -362,7 +362,7 @@ td.actions a {
 }
 
 .state_warning {
-        color: #FFDD00;
+        color: orange;
         font-weight: bold;
 }
 
